# MeshCodec

./: .gitignore  CMakeLists.txt  README.md
lib/float16/: float16.h
src/: mc_AttributeCodec.cpp  mc_AttributeStreamInfo.cpp  mc_Codec.cpp  mc_Float.cpp  mc_IndexCodec.cpp  mc_IndexDecompressor.cpp  mc_IndexStreamContext.cpp  mc_MeshCodec.cpp  mc_MeshCodec.h  mc_StackAllocator.cpp  mc_VertexCodec.cpp  mc_VertexDecompContext.cpp  mc_VertexDecompressor.cpp  mc_Zstd.cpp
src/include/: mc_AttributeCodec.h  mc_BitStream.h  mc_Codec.h  mc_CompressionFormat.h  mc_DecompContext.h  mc_Float.h  mc_IndexCodec.h  mc_IndexDecompressor.h  mc_IndexStreamContext.h  mc_StackAllocator.h  mc_StreamContext.h  mc_Types.h  mc_VertexCodec.h  mc_VertexDecompContext.h  mc_VertexDecompressor.h  mc_Zstd.h
tests/: CMakeLists.txt
tests/src/: main.cpp
